<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.95"
    android:background="@drawable/app_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#FFFFFF"
        android:gravity="center_horizontal">

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/white"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="54dp"

                android:background="@android:color/white"
                android:drawableStart="@drawable/ic_gmail"
                android:drawablePadding="8dp"
                android:paddingStart="8dp"
                android:text="@string/sign_up_with_google"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/orText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_horizontal"
            android:text="@string/or_text"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll" />

        <EditText
            android:id="@+id/full_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/rect_border"
            android:ems="10"
            android:hint="@string/full_name_text"
            android:inputType="textPersonName"
            android:padding="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/orText" />

        <EditText
            android:id="@+id/email_address_text"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/rect_border"
            android:ems="10"
            android:hint="@string/email_address_text"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            app:layout_constraintBottom_toTopOf="@+id/password_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/password_text"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/rect_border"
            android:ems="10"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:padding="12dp"
            app:layout_constraintBottom_toTopOf="@+id/lets_go_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/lets_go_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/blue"
            android:fontFamily="@font/roboto_bold"
            android:minWidth="242dp"
            android:minHeight="54dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="Let's Go!"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toTopOf="@id/continue_as_guest_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/continue_as_guest_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_horizontal"
            android:text="@string/continue_guest"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/term_condition_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/term_condition_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="left"
            android:text="@string/term_and_condition_text"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>