<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="112dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/immersion_logo_tight_blue_2f7ae5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/magic_numbet_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"

            android:layout_marginEnd="16dp"

            android:fontFamily="@font/roboto_regular"
            android:gravity="center_horizontal"
            android:text="@string/magic_number_desc"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/enter_magic_numbet_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"

            android:fontFamily="@font/roboto_regular"
            android:gravity="center_horizontal"
            android:text="@string/enter_number_below_text"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/magic_numbet_text" />

        <EditText
            android:id="@+id/magic_mnumber_edit_text"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/rect_border"
            android:ems="10"

            android:fontFamily="@font/roboto_bold"
            android:gravity="center_horizontal"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:text="M1V7XT"
            android:textColor="@color/dark_orange"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enter_magic_numbet_title_text" />

        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="20dp"
            android:background="@color/blue"
            android:fontFamily="@font/roboto_bold"
            android:minWidth="242dp"
            android:minHeight="54dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            app:layout_constraintBottom_toTopOf="@id/skip_btn"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/skip_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="54dp"
            android:alpha="1"
            android:background="@android:color/darker_gray"
            android:fontFamily="@font/roboto_bold"
            android:minWidth="242dp"
            android:minHeight="54dp"
            android:text="@string/skip"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>