<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ultra_light_gray"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/watch_ble_connected"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="-150dp"
            android:src="@drawable/immersion_logo_tight_blue_2f7ae5"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:minHeight="250dp"
        android:src="@drawable/screenshot_thumb"
         />

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/sensor_checkbox"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:button="@drawable/custom_checkbox"
            android:checked="true" />

        <TextView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/sensor_is_connected"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="normal" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/data_being_used_checkbox"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:button="@drawable/custom_checkbox"
            android:checked="true" />

        <TextView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/data_is_received"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="normal" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/imersion_calculating_checkbox"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:button="@drawable/custom_checkbox" />

        <TextView
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/imersion_is_calculating"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="normal" />
    </TableRow>

</LinearLayout>